--- a/motors_bringup/CMakeLists.txt
+++ b/motors_bringup/CMakeLists.txt
@@ -23,9 +23,8 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-install(DIRECTORY
-  launch
-  DESTINATION share/${PROJECT_NAME}/
+ament_package(  
+  INSTALL_TO_SHARE
+    launch
+    params
 )
-
-ament_package()
