--- a/perception/cone_detection_python/launch/yolo.launch.yml
+++ b/perception/cone_detection_python/launch/yolo.launch.yml
@@ -1,6 +1,6 @@
 launch:
   - node:
-      pkg: "cone_detection"
+      pkg: "cone_detection_python"
       exec: "camera_sub"
       name: "camera_sub"
       # namespace: "yolo"
