--- a/perception/cone_detection_python/setup.cfg
+++ b/perception/cone_detection_python/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/cone_detection
+script_dir=$base/lib/cone_detection_python
 [install]
-install_scripts=$base/lib/cone_detection
+install_scripts=$base/lib/cone_detection_python
