--- a/cone_pose_estimator/launch/pose_estimator.launch.yaml
+++ b/cone_pose_estimator/launch/pose_estimator.launch.yaml
@@ -4,7 +4,7 @@ launch:
         pkg: "static_cameras_tf2"
         exec: "tf2_publisher"
         name: "cameras_tf2"
-        respawn: "False"
+        respawn: "True"
 
     - node:
         pkg: "cone_pose_estimator"
