Adapt code to new fused image format

--- a/perception/cone_pose_estimator/CMakeLists.txt
+++ b/perception/cone_pose_estimator/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(tf2 REQUIRED) 
 find_package(tf2_ros REQUIRED) 
+find_package(tf2_geometry_msgs REQUIRED) 
 find_package(OpenCV REQUIRED)
 find_package(sensor_msgs REQUIRED) 
 find_package(stereo_msgs REQUIRED) 
@@ -28,7 +29,7 @@ include_directories(
 )
 
 add_executable(pose_estimator src/cone_pose_estimator.cpp)
-ament_target_dependencies(pose_estimator rclcpp tf2 tf2_ros sensor_msgs message_filters cv_bridge image_transport OpenCV geometry_msgs stereo_msgs)
+ament_target_dependencies(pose_estimator rclcpp tf2 tf2_ros tf2_geometry_msgs sensor_msgs message_filters cv_bridge image_transport OpenCV geometry_msgs stereo_msgs)
 
 install(TARGETS
   pose_estimator
