--- a/motors_bringup/launch/bringup_ds4.launch.yml
+++ b/motors_bringup/launch/bringup_ds4.launch.yml
@@ -1,39 +1,57 @@
 
 launch:
-  - group:
-    - push-ros-namespace:
-        namespace: "/ds4"
+    - group:
+        - push-ros-namespace:
+            namespace: "/vesc"
+        - include:
+            file: "$(find-pkg-share vesc_ackermann)/launch/vesc_to_odom_node.launch.xml"
+            arg:
+                - name: speed_to_erpm_gain
+                  value: "4000.0"
+
+    - group:
+        - push-ros-namespace:
+            namespace: "/ds4"
+        - node:
+            pkg: "ds4_driver"
+            exec: "ds4_driver_node.py"
+            name: "ds4_driver"
+            respawn: "True"
+        - node:
+            pkg: "tf2_ros"
+            exec: "static_transform_publisher"
+            name: "ds4_to_imu"
+            respawn: "True"
+            args: "0 0.05 -0.01 -1.5707 0 1.5707 ds4 ds4_imu"
+
     - node:
-        pkg: "ds4_driver"
-        exec: "ds4_driver_node.py"
-        name: "ds4_driver"
+        pkg: "vesc_driver"
+        exec: "vesc_driver_node"
+        name: "vesc_driver_node"
+        namespace: "vesc"
         respawn: "True"
-    - node:
-        pkg: "tf2_ros"
-        exec: "static_transform_publisher"
-        name: "ds4_to_imu"
-        respawn: "True"
-        args: "0 0.05 -0.01 -1.5707 0 1.5707 ds4 ds4_imu"
+        param: 
+            - from: "$(find-pkg-share motors_bringup)/params/vesc_config.yml"
 
-  - node:
-      pkg: "vesc_driver"
-      exec: "vesc_driver_node"
-      name: "vesc_driver_node"
-      namespace: "vesc"
-      respawn: "True"
-      param: 
-        - from: "$(find-pkg-share motors_bringup)/params/vesc_config.yaml"
+    # - node:
+    #     pkg: "motors_bringup"
+    #     exec: "ds4_to_vesc"
+    #     name: "ds4_to_vesc"
+    #     respawn: 'True'
+    #     param:
+    #         - name: disable_servo_control
+    #           value: true
 
-  - node:
-      pkg: "topic_tools"
-      exec: "transform"
-      name: "forward"
-      respawn: 'True'
-      args: "/ds4/status /vesc/commands/motor/duty_cycle std_msgs/Float64 'std_msgs.msg.Float64(data=m.axis_right_y/2)' --import std_msgs"
+    # - node:
+    #     pkg: "topic_tools"
+    #     exec: "transform"
+    #     name: "forward"
+    #     respawn: 'True'
+    #     args: "/ds4/status /vesc/commands/motor/duty_cycle std_msgs/Float64 'std_msgs.msg.Float64(data=m.axis_right_y/2)' --import std_msgs"
 
-  - node:
-      pkg: "topic_tools"
-      exec: "transform"
-      name: "lateral"
-      respawn: 'True'
-      args: "/ds4/status /vesc/commands/servo/position std_msgs/Float64 'std_msgs.msg.Float64(data=m.axis_left_x/2*0.7 + 0.5)' --import std_msgs"
+    # - node:
+    #     pkg: "topic_tools"
+    #     exec: "transform"
+    #     name: "lateral"
+    #     respawn: 'True'
+    #     args: "/ds4/status /vesc/commands/servo/position std_msgs/Float64 'std_msgs.msg.Float64(data=m.axis_left_x/2*0.7 + 0.5)' --import std_msgs"
