--- a/motors_bringup/CMakeLists.txt
+++ b/motors_bringup/CMakeLists.txt
@@ -9,6 +9,7 @@ endif()
 find_package(ament_cmake_auto REQUIRED)
 find_package(ds4_driver REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
