--- a/quark_motor_bringup/launch/bringup.launch.yml
+++ b/quark_motor_bringup/launch/bringup.launch.yml
@@ -10,12 +10,12 @@ launch:
         namespace: vesc
         respawn: True
         param: 
-            - from: $(find-pkg-share motors_bringup)/params/vesc_config.yml
+            - from: $(find-pkg-share quark_motor_bringup)/params/vesc_config.yml
     - include:
         file: $(find-pkg-share vesc_driver)/launch/vesc_driver_node.launch.py
         arg:
           - name: params
-            value: $(find-pkg-share motors_bringup)/params/vesc_config.yml
+            value: $(find-pkg-share quark_motor_bringup)/params/vesc_config.yml
 
   - node:
     pkg: "key_teleop"
