--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vendor/gz_math6_vendor"]
 	path = vendor/gz_math6_vendor
 	url = https://github.com/gazebo-release/gz_math6_vendor.git
+[submodule "vendor/diagnostics"]
+	path = vendor/diagnostics
+	url = https://github.com/ros/diagnostics.git
